--- a/reservia.html
+++ b/reservia.html
@@ -25,7 +25,41 @@
 <!-- Search -->
         <section class="searchbar">
             <span class="searchbaricon"><i class="fas fa-map-marker-alt"></i></span>
-        </section>
+        <div>
+            <input class="searchform" type="text" placeholder="Marseille, France">
+        </div>
+        <button class="submitinput">
+     </button>
+    </section>
     </main>
+<!-- Filters -->
+    <section class="searchfiltersbox">
+        <h2 class="filterstitles">Filtres</h2>
+        <div class="searchfilters">
+            <div class="searchfiltersframe">
+                <i class="fas fa-money-bill-wave" aria-hidden="true" id="eco"></i>
+            </div>
+                <span class="saerchfilterstitles">Économique</span>
+        </div>
+        <div class="searchfilters">
+            <div class="searchfiltersframe">
+                <i class="fas fa-child" aria-hidden="true" id="familial"></i>
+            </div>
+                <span class="searchfilterstitles">Familial</span>
+        </div>
+        <div class="searchfilters">
+            <div class="searchfiltersframe">
+                <i class="fas fa-heart" aria-hidden="true" id="romantique"></i>
+            </div>
+            <span class="searchfilterstitles">Romantique</span>
+        </div>
+        <div class="searchfilters">
+            <div class="searchfiltersframe">
+                <i class="fas fa-dog" aria-hidden="true" id="animaux"></i>
+            </div>
+            <span class="saerchfilterstitles">Animaux autorisés</span>
+        </div>
+    </section>
+<!-- Info -->
     </div>
 </body>
