--- a/reservia.html
+++ b/reservia.html
@@ -61,5 +61,12 @@
         </div>
     </section>
 <!-- Info -->
-    </div>
+    <section class="infobox">
+        <div class="infoframe">
+            <i class="fas fa-info infoicon" aria-hidden="true"></i>
+        </div>
+        <p class="infotext">Plus de 500 logements disponible dans cette ville </p>
+    </section>
+<!-- Offres-->
+    
 </body>
