--- a/reservia.html
+++ b/reservia.html
@@ -68,5 +68,133 @@
         <p class="infotext">Plus de 500 logements disponible dans cette ville </p>
     </section>
 <!-- Offres-->
-    
+    <section class="offers">
+        <div class="housebox">
+            <h2 class="offershead">Hébergement à Marseille</h2>
+            <div class="houseofferts">
+                <a class="card" href="#">
+                    <div class="houseimgbox">
+                        <img class="houseimg" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge de la Cannebière">
+                    </div>
+                    <div>
+                        <h3 class="housetitles">Auberge de la Cannebière</h3>
+                    </div>
+                    <p class="housep">Nuit à partir de <strong>25€</strong></p>
+                    <div class="ratingstras">
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" data-active="false"></i>
+                    </div>
+                </a>
+                <a class="card" href="#">
+                    <div class="houseimgbox">
+                        <img class="houseimg" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port">
+                    </div>
+                    <div>
+                        <h3 class="housetitles">Hôtel du port</h3>
+                    </div>
+                    <p class="housep">Nuit à partir de <strong>52€</strong></p>
+                    <div class="ratingstars">
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                    </div>
+                </a>
+                <a class="card" href="#">
+                    <div class="houseimg">
+                        <img class="houseimg" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes">
+                    </div>
+                    <div>
+                        <h3 class="housetitles">Hôtel les mouettes</h3>
+                    </div>
+                    <p class="housep" >Nuit à partir de <strong>76€</strong></p>
+                    <div class="ratingstars">
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" data-active="false" aria-hidden="true"></i>
+                    </div>
+                </a>
+                <a class="card" href="#">
+                    <div class="houseimgbox">
+                        <img class="houseimg" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer">
+                    </div>
+                    <div>
+                        <h3 class="housetitles">Hôtel de la mer</h3>
+                    </div>
+                    <p class="housep">Nuit à partir de <strong>46€</strong></p>
+                    <div class="ratingstars">
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" data-active="false" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" data-active="false" aria-hidden="true"></i>
+                    </div>
+                </a>
+                <a class="card" href="#">
+                    <div class="houseimgbox">
+                        <img class="houseimg" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier">
+                    </div>
+                    <div>
+                        <h3 class="housetitles">Auberge le Panier</h3>
+                    </div>
+                    <p class="housep">Nuit à partir de <strong>23€</strong></p>
+                    <div class="ratingstars">
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                    </div>
+                </a>
+                <a class="card" href="#">
+                    <div class="houseimgbox">
+                        <img class="houseimg" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina">
+                    </div>
+                    <div>
+                        <h3 class="housetitles">Hôtel chez Amina</h3>
+                    </div>
+                    <p class="housep">Nuit à partir de <strong>96€</strong></p>
+                    <div class="ratingstars">
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                    </div>
+                </a>
+            </div>
+            <a class="viewmore" href="#">Afficher plus</a>
+        </div>
+<!-- Populaires -->
+        <div class="popbox">
+            <h2 class="pophead">
+                Les plus populaires
+                <i class="fas fa-chart-line" aria-hidden="true"></i>
+            </h2>
+            <a class="popcard" href="#">
+                <div class="popinbox">
+                    <img class="popimg" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel le soleil du matin">
+                 </div>
+                 <div class="textconteneur">
+                     <div class="textbox">
+                         <h3 class="poptitles">Hôtel le soleil du matin</h3>
+                         <p class="pop">Nuit à partir de <strong>128€</strong></p>
+                     </div>
+                     <div class="ratingstars">
+                         <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                         <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                         <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                         <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                         <i class="fas fa-star ratingstarsicon" aria-hidden="true" ></i>
+                     </div>
+                 </div>
+            </a>
+        </div>
+    </section>
 </body>
