--- a/reservia.html
+++ b/reservia.html
@@ -195,6 +195,40 @@
                      </div>
                  </div>
             </a>
+            <a class="popcard" href="#">
+                <div class="popinbox">
+                    <img class="popimg" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes">
+                </div>
+                <div class="textconteneur">
+                    <div class="textbox">
+                        <h3 class="poptitles">Au coeur de l'eau Chambre d'hôtes</h3>
+                        <p class="pop">Nuit à partir de <strong>71€</strong></p>
+                    </div>
+                    <div class="ratingstars">
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                        <i class="fas fa-star ratingstarsicon" data-active="false" aria-hidden="true"></i>
+                    </div>
+                </div>
+            </a>
+            <a class="popcard" href="#">
+                <div class="popinbox">
+                    <img class="popimg" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel tout bleu et blanc">
+                </div>
+                <div class="textconteneur">
+                    <h3 class="poptitles">Hôtel tout bleu et blanc </h3>
+                    <p class="pop">Nuit à partir de <strong>68€</strong></p>
+                </div>
+                <div class="ratingstars">
+                    <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                    <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                    <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                    <i class="fas fa-star ratingstarsicon" aria-hidden="true"></i>
+                    <i class="fas fa-star ratingstarsicon" data-active="false" aria-hidden="true"></i>
+                </div>
+            </a>
         </div>
     </section>
 </body>
