--- a/reservia.html
+++ b/reservia.html
@@ -231,4 +231,46 @@
             </a>
         </div>
     </section>
+<!-- Activités -->
+    <section id="activites">
+        <h2 class="acttitles">Activités à Marseille</h2>
+        <div class="actconteneur">
+            <a class="firstcard" href="#">
+                <div class="imgconteneur">
+                    <img class="actimg" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port">
+                </div>
+                    <h3 class="cardtitles">Vieux port</h3>
+            </a>
+            <a class="secondcard" href="#">
+                <div class="imgconteneur">
+                    <img class="actimg" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de pomegues">
+                </div>
+                    <h3 class="cardtitles"> Fort de Pomégues</h3>
+            </a>
+            <a class="thirdcard" href="#">
+                <div class="imgconteneur">
+                    <img class="actimg" src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
+                </div>
+                    <h3 class="cardtitles">Îles du Frioul</h3>
+            </a>
+            <a class="fourthcard" href="#">
+                <div class="imgconteneur">
+                    <img class="actimg" src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
+                </div>
+                <h3 class="cardtitles">Parc National des Calanques</h3>
+            </a>
+            <a class="fivecard" href="#">
+                <div class="imgconteneur">
+                    <img class="actimg" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
+                </div>
+                <h3 class="cardtitles">Notre-Dame-de-la-Garde</h3>
+            </a>
+            <a class="sixcard" href="#">
+                <div class="imgconteneur">
+                    <img class="actimg" src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
+                </div>
+                <h3 class="cardtitles">Parc Longchamp</h3>
+            </a>
+        </div>
+    </section>
 </body>
