--- a/reservia.html
+++ b/reservia.html
@@ -273,4 +273,26 @@
             </a>
         </div>
     </section>
+<!-- Footer -->
+    <div class="footer">
+        <div class="footerbox">
+            <div class="colone">
+                <h3>A propos</h3>
+                    <a class="footlink" href="#">Fonctionnement du site</a>
+                    <a class="footlink" href="#">Conditions générales de vente</a>
+                    <a class="footlink" href="#">Données et confidentialités</a>
+            </div>
+            <div class="coltwo">
+                <h3>Nos Hébergements</h3>
+                    <a class="footlink" href="#">Charte de qualité</a>
+                    <a class="footlink" href="#">Soumettre votre hôtel</a>
+            </div>
+            <div class="colthree">
+                <h3>Assistance</h3>
+                    <a class="footlink" href="#">Centre d'aide</a>
+                    <a class="footlink" href="#">Nous contacter</a>
+            </div>
+        </div>
+    </div>
 </body>
+</html>
