--- a/reservia.html
+++ b/reservia.html
@@ -28,8 +28,7 @@
         <div>
             <input class="searchform" type="text" placeholder="Marseille, France">
         </div>
-        <button class="submitinput">
-     </button>
+        <button class="submitinput">Rechercher</button>
     </section>
     </main>
 <!-- Filters -->
