--- a/Reservia1.html
+++ b/Reservia1.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/be8e39ade2.js" crossorigin="anonymous"></script> 
-    
     <title>Reservia</title>
 </head>
 
@@ -15,7 +14,7 @@
     <header>
         <nav class="menu">
             <div class="logo">
-                <img class="logo" src="./images/logo/Reservia.svg" alt="logo">
+                <img src="./images/logo/Reservia@3x.png" alt="">
             </div>
                 <a class="nav" href="#">Hébergements</a>
                 <a class="navact" href="#activities">Activités</a>
